added meta tags

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -5,6 +5,31 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
     <title>Brainbust</title>
+    <meta name="title" content="BrainBust">
+    <meta name="description" content="BrainBust gives a user  the ability to create their  own quizzes to allow for continual practice and educational improvement.
+    Tools/Framworks include:
+    FLask/SQAlchemy, 
+    Python,
+    React, 
+    Redux, 
+    CSS, 
+    JavaScript,
+    Docker">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://brain-bust.herokuapp.com/">
+    <meta property="og:title" content="BrainBust">
+    <meta property="og:description" content="BrainBust gives a user  the ability to create their  own quizzes to allow for continual practice and educational improvement.
+    Tools/Framworks include:
+    FLask/SQAlchemy, 
+    Python,
+    React, 
+    Redux, 
+    CSS, 
+    JavaScript,
+    Docker">
+    <meta property="og:image" content="https://linkedincontent.s3.us-east-2.amazonaws.com/BrainBust.png">
   </head>
   <body>
     <div id="root"></div>
